--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,25 @@
 body {
   background-color: #f9f7fe;
+  font-family: Helvetica, Arial, sans-serif;
+}
+.container {
+  margin: 120px auto;
+  max-width: 600px;
+  background-color: #fff;
+}
+header {
+  margin-bottom: 30px;
 }
 h1 {
+  text-align: center;
   font-weight: 800;
   font-size: 36px;
   line-height: 1.5;
   color: #272844;
+}
+form {
+  padding: 30px;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
 }
