--- a/src/style.css
+++ b/src/style.css
@@ -23,3 +23,12 @@ form {
   border-radius: 10px;
   display: flex;
 }
+.instructions {
+  padding: 30px;
+  border: 1px solid rgba(39, 33, 66, 0.5);
+  width: 88%;
+  font-size: 16px;
+  border-radius: 50px;
+  line-height: 28px;
+  color: 4272044;
+}
