--- a/src/style.css
+++ b/src/style.css
@@ -20,8 +20,10 @@ h1 {
 form {
   padding: 30px;
   background-color: white;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
   border-radius: 10px;
   display: flex;
+  margin-bottom: 30px;
 }
 .instructions {
   padding: 30px;
@@ -31,4 +33,15 @@ form {
   border-radius: 50px;
   line-height: 28px;
   color: 4272044;
+}
+
+.submit-button {
+  margin-left: 10px;
+  background: #885df1;
+  color: white;
+  border: none;
+  width: 150px;
+  font-size: 16px;
+  border-radius: 50px;
+  padding: 14px 24px;
 }
