--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,9 @@ body {
   background-color: #f9f7fe;
   font-family: Helvetica, Arial, sans-serif;
 }
+a {
+  color: #885df1;
+}
 .container {
   margin: 120px auto;
   max-width: 600px;
@@ -44,4 +47,17 @@ form {
   font-size: 16px;
   border-radius: 50px;
   padding: 14px 24px;
+}
+.poem {
+  font-size: 16px;
+  background-color: #fff;
+  padding: 20px;
+  line-height: 2;
+  border-left: 3px solid #885df1;
+  box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
+}
+footer {
+  text-align: center;
+  font: size 14px;
+  margin-top: 30px;
 }
