--- a/src/style.css
+++ b/src/style.css
@@ -56,6 +56,9 @@ form {
   border-left: 3px solid #885df1;
   box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
 }
+.poem strong {
+  color: pink;
+}
 footer {
   text-align: center;
   font: size 14px;
