--- a/src/style.css
+++ b/src/style.css
@@ -25,10 +25,16 @@ h1 {
   margin-bottom: 30px;
   border-radius: 10px;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
-  padding: 30px;
+  padding: 15px 20px;
 }
 form {
   display: flex;
+}
+.hint {
+  line-height: 1.5;
+  margin-top: 5px;
+  opacity: 0.6;
+  font-size: 12px;
 }
 .instructions {
   padding: 30px;
@@ -58,6 +64,9 @@ form {
   border-left: 3px solid #885df1;
   box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
 }
+.hidden {
+  display: none;
+}
 .poem strong {
   color: pink;
 }
@@ -65,4 +74,17 @@ footer {
   text-align: center;
   font: size 14px;
   margin-top: 30px;
+}
+.generating {
+  animation: blink-animation 1s stop(5, start) infinite;
+}
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
